--- a/name_generator.ipynb
+++ b/name_generator.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Silly name generator and Pylint\n",
+    "# Silly name generator\n",
     "\n",
     "import sys\n",
     "import random\n",
